--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:sandbox": "wrangler pages dev dist --d1=sourssing-production --local --ip 0.0.0.0 --port 3000",
     "build": "vite build",
-    "preview": "wrangler pages dev",
-    "deploy": "npm run build && wrangler pages deploy",
+    "preview": "wrangler pages dev dist",
+    "deploy": "npm run build && wrangler pages deploy dist --project-name sourssing",
+    "db:migrate:local": "wrangler d1 migrations apply sourssing-production --local",
+    "db:migrate:prod": "wrangler d1 migrations apply sourssing-production",
+    "db:console:local": "wrangler d1 execute sourssing-production --local",
+    "clean-port": "fuser -k 3000/tcp 2>/dev/null || true",
+    "test": "curl http://localhost:3000",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.11.3"
+    "@cloudflare/workers-types": "^4.20260103.0",
+    "@hono/vite-cloudflare-pages": "^0.4.3",
+    "hono": "^4.11.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@hono/vite-build": "^1.2.0",
