Phase 9: Complete Platform Rebranding - Sourssing → Lesorce
✅ Rebranding Complete:
- Updated all source files (src/)
- Updated database migrations (migrations/)
- Updated public files (robots.txt, sitemap.xml)
- Updated config files (wrangler.jsonc, package.json, .dev.vars, ecosystem.config.cjs)
- Updated all documentation files
- Updated admin email: admin@lesorce.com
- Updated URLs: lesorce.com

✅ Bilingual Branding:
- English: Lesorce
- Arabic: ليسورس (Lesorce in Arabic)

✅ Verification:
- 0 remaining 'Sourssing' references
- All tests passing
- Build successful (350.87 kB)
- PM2 running as 'lesorce'

🎯 Status: READY FOR DEPLOYMENT
Bundle Size: 350.87 KB
Test Credentials:
- Admin: admin@lesorce.com / admin123
- Buyer: buyer@company.com / admin123
- Vendor: vendor@supplier.com / admin123

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "sourssing",
+  "name": "lesorce",
   "compatibility_date": "2026-01-04",
   "pages_build_output_dir": "./dist",
   "compatibility_flags": [
@@ -9,7 +9,7 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "sourssing-production",
+      "database_name": "lesorce-production",
       "database_id": "local"
     }
   ]
