--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:sandbox": "wrangler pages dev dist --d1=sourssing-production --local --ip 0.0.0.0 --port 3000",
+    "dev:sandbox": "wrangler pages dev dist --d1=lesorce-production --local --ip 0.0.0.0 --port 3000",
     "build": "vite build",
     "preview": "wrangler pages dev dist",
-    "deploy": "npm run build && wrangler pages deploy dist --project-name sourssing",
-    "db:migrate:local": "wrangler d1 migrations apply sourssing-production --local",
-    "db:migrate:prod": "wrangler d1 migrations apply sourssing-production",
-    "db:console:local": "wrangler d1 execute sourssing-production --local",
+    "deploy": "npm run build && wrangler pages deploy dist --project-name lesorce",
+    "db:migrate:local": "wrangler d1 migrations apply lesorce-production --local",
+    "db:migrate:prod": "wrangler d1 migrations apply lesorce-production",
+    "db:console:local": "wrangler d1 execute lesorce-production --local",
     "clean-port": "fuser -k 3000/tcp 2>/dev/null || true",
     "test": "curl http://localhost:3000",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
