--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:sandbox": "wrangler pages dev dist --d1=lesorce-production --local --ip 0.0.0.0 --port 3000",
-    "build": "vite build",
-    "preview": "wrangler pages dev dist",
-    "deploy": "npm run build && wrangler pages deploy dist --project-name lesorce",
+    "dev:api": "wrangler pages dev dist/client --d1=lesorce-production --local --port 8787",
+    "build": "vite build && wrangler pages deploy dist/client --project-name lesorce --dry-run",
+    "build:client": "vite build",
+    "preview": "vite preview",
+    "deploy": "npm run build:client && wrangler pages deploy dist/client --project-name lesorce",
     "db:migrate:local": "wrangler d1 migrations apply lesorce-production --local",
     "db:migrate:prod": "wrangler d1 migrations apply lesorce-production",
     "db:console:local": "wrangler d1 execute lesorce-production --local",
@@ -17,13 +18,19 @@
   "dependencies": {
     "@cloudflare/workers-types": "^4.20260103.0",
     "@hono/vite-cloudflare-pages": "^0.4.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "hono": "^4.11.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@hono/vite-build": "^1.2.0",
     "@hono/vite-dev-server": "^0.18.2",
-    "vite": "^6.3.5",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^6.4.1",
     "wrangler": "^4.4.0"
   }
 }
